get rid of warnings